# Metis

./: .env  .travis.yml  Readme.rst  cookiecutter.json  pyproject.toml
examples/: main.py
hooks/: post_gen_project.py  post_gen_project.sh
metis/: .coveragerc  .travis.yml  ChangeLog  Readme.rst  __init__.py  app.py  cli.py  magic_logger.py  metis_logging.py  model.py  setup.cfg  setup.py  tox.ini
metis/.github/: CONTRIBUTING.md
metis/docs/: Makefile  make.bat
metis/docs/source/: conf.py  index.rst
metis/metis/: __init__.py
metis/tests/features/: package.feature
metis/tests/features/steps/: steps_package.py
metis/tests/unit/: test_package.py
{{cookiecutter.project_slug}}/: .coveragerc  .travis.yml  Dockerfile  METADATA  Readme.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/.git_hooks/: filter-flow-release-start-version  pre-push  prepare-commit-msg
{{cookiecutter.project_slug}}/.github/: CONTRIBUTING.md
{{cookiecutter.project_slug}}/etc/: config.ini
{{cookiecutter.project_slug}}/tests/features/: package.feature
{{cookiecutter.project_slug}}/tests/features/steps/: steps_package.py
{{cookiecutter.project_slug}}/tests/unit/: conftest.py  test_http_model.py  test_import.py  test_package.py  test_startup.py  test_status.py
{{cookiecutter.project_slug}}/tests/unit/fixtures/: config.ini
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  routes.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/handlers/: __init__.py  status.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/models/: __init__.py
