[metadata]
name = Metis
author = David Francos
author-email = opensource@davidfrancos.net
summary = Convert behave features to github issues
description-file = Readme.rst
home-page = http://github.com/xayon/metis
license = MIT
classifier =
    Programming Language :: Python
    Development Status :: 1 - Alpha
    License :: OSI Approved :: MIT

[files]
packages =
    metis

[entry_points]
console_scripts =
    metis = metis:main

[tool:pytest]
addopts=--flake8 --cov-report=html --cov-report=term -v -m='not wip' tests/unit --cov

[aliases]
test=pytest
