[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.project_summary}}"
authors = ["cookiecutter.author_name <cookiecutter.author_email>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.5"
toml = "^0.10.0"
semver = "^2.8"
aiohttp_apiset = "^0.9.6"
cleo = "^0.7.4"
pygogo = "^0.12.0"
aiozipkin = "^0.5.0"

[tool.poetry.dev-dependencies]
aiohttp-devtools = "^0.13.1"
auto-changelog = "^0.1.7"
sphinx = "^2.1"
bandit = "^1.6"
pytest-pydocstyle = "^1.5"
pytest-pycodestyle = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
