[metadata]
name = {{cookiecutter.project_name}}
author = {{cookiecutter.author_name}}
author-email = {{cookiecutter.author_email}}
summary = {{cookiecutter.project_summary}}
description-file = Readme.rst
home-page = http://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}
license = {{cookiecutter.license}}
classifier =
    Programming Language :: Python
    Development Status :: 1 - Alpha
    License :: OSI Approved :: {{cookiecutter.license}}

[files]
packages =
    {{cookiecutter.project_slug}}

[entry_points]
console_scripts =
    {{cookiecutter.project_slug}} = {{cookiecutter.project_slug}}:main

[tool:pytest]
addopts=--flake8 --cov-report=html --cov-report=term -v -m='not wip' tests/unit --cov {{cookiecutter.project_slug}}

[aliases]
test=pytest

[build_sphinx]
builders = html
source-dir = docs/source
build-dir = docs/build
all-files = 1
