[metadata]
name = {{cookiecutter.package_slug}}
author = {{cookiecutter.author}}

[entry_points]
console_scripts =
   {{cookiecutter.package_slug}}={{cookiecutter.package_slug}:main

[tool:pytest]
flake8-ignore =
    doc/conf.py ALL

addopts=--flake8 -m "not wip" -vv --cov-report html:.cov_html --cov-report term --cov {{cookiecutter.package_slug}}

[pbr]
autodoc_tree_index_modules=True

[build_sphinx]
builder=html

[alias]
test=pytest behave

[extras]
doc =
    sphinx
    sphinxcontrib-napoleon
    sphinxcontrib-httpdomain

