[metadata]
name = {{cookiecutter.project_slug}}
author = {{cookiecutter.author_name}}

[entry_points]
console_scripts =
   {{cookiecutter.project_slug}}={{cookiecutter.project_slug}}:main

[tool:pytest]
flake8-ignore =
    doc/conf.py ALL

addopts=--flake8 -m "not wip" -vv --cov-report html:.cov_html --cov-report term --cov {{cookiecutter.project_slug}}

[pbr]
autodoc_tree_index_modules=True

[build_sphinx]
builder=html

[alias]
test=pytest behave

[extras]
doc =
    sphinx
    sphinxcontrib-napoleon
    sphinxcontrib-httpdomain

